main
- rewrote README.md
- Added maven profile to enable the selective running of JMH benchmarks, default is to disable them